compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__type_params__custom_type_nested_result_type_count_once.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
expression: "\n        pub type Wibble(a) {\n            Oops\n        }\n\n        pub fn wibble() -> Result(a, Wibble(a)) {\n            todo\n        }\n        "
---
----- SOURCE CODE

        pub type Wibble(a) {
            Oops
        }

        pub fn wibble() -> Result(a, Wibble(a)) {
            todo
        }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([wibble/0]).
-export_type([wibble/1]).

-type wibble(I) :: oops | {gleam_phantom, I}.

-spec wibble() -> {ok, any()} | {error, wibble(any())}.
wibble() ->
    erlang:error(#{
        gleam_error => todo,
        message => ~"`todo` expression evaluated. This code has not yet been implemented.",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"wibble",
        line => 7
    }).
