compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__type_params__named_args_count_once.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
expression: "\n        pub fn foo() -> Result(a, a) {\n            todo\n        }\n        "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([foo/0]).

-spec foo() -> {ok, any()} | {error, any()}.
foo() ->
    erlang:error(#{gleam_error => todo,
            message => <<"This has not yet been implemented"/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"foo"/utf8>>,
            line => 3}).
