compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__type_params__result_type_count_once.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
expression: "\n        pub fn wibble() -> Result(a, a) {\n            todo\n        }\n        "
---
----- SOURCE CODE

        pub fn wibble() -> Result(a, a) {
            todo
        }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([wibble/0]).

-spec wibble() -> {ok, any()} | {error, any()}.
wibble() ->
    erlang:error(#{
        gleam_error => todo,
        message => ~"`todo` expression evaluated. This code has not yet been implemented.",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"wibble",
        line => 3
    }).
