compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__type_params__tuple_type_params_count_twice.snap
---
source: compiler-core/src/erlang/tests/type_params.rs
expression: "\n        pub fn wibble() -> #(a, b) {\n            todo\n        }\n        "
---
----- SOURCE CODE

        pub fn wibble() -> #(a, b) {
            todo
        }
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([wibble/0]).

-spec wibble() -> {any(), any()}.
wibble() ->
    erlang:error(#{
        gleam_error => todo,
        message => ~"`todo` expression evaluated. This code has not yet been implemented.",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"wibble",
        line => 3
    }).
